🐛 fix(settings): settings block spacing fix.

--- a/packages/assets/css/src/scss/_components/_setting-block/_elements/_build-header.scss
+++ b/packages/assets/css/src/scss/_components/_setting-block/_elements/_build-header.scss
@@ -20,7 +20,6 @@
 
 				@include media(max-width, sm) {
 					flex-direction: column;
-					align-items: flex-start;
 				}
 			}
 		}
